--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">assignmenteight</string>
+    <string name="game_name">Game Name!</string>
+    <string name="buttonStart">Start!</string>
+    <string name="buttonHighscores">High Scores</string>
 </resources>
