Added the ability to fling the ball.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="game_name">Game Name!</string>
     <string name="buttonStart">Start!</string>
     <string name="buttonHighscores">High Scores</string>
+    <string name="buttonReset">Reset</string>
 </resources>
