Added activity layout for endgame screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="buttonStart">Start!</string>
     <string name="buttonHighscores">High Scores</string>
     <string name="buttonReset">Reset</string>
+    <string name="endgame_title">Game Over!</string>
+    <string name="endgame_submit">Submit</string>
 </resources>
