--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="developers">Developed by Justin and Nash</string>
     <string name="buttonStart">Start!</string>
     <string name="buttonHighscores">High Scores</string>
-    <string name="buttonReset">Reset</string>
+    <string name="time_up">Time up!</string>
+    <string name="buttonPlayAgain">Play Again</string>
+    <string name="buttonBacktomenu">Main menu</string>
 </resources>
