Username and Scores save when the save button is clicked on the endgame screen. Scores also display on the highscores page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="time_up">Time up!</string>
     <string name="buttonPlayAgain">Play Again</string>
     <string name="buttonBacktomenu">Main menu</string>
+    <string name="saveScore">Save Score!</string>
+    <string name="enterName">Enter your name</string>
 </resources>
